<resources>
    <string name="app_name">Museum Project 5</string>
    <string name="title_activity_main2">MainActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <!-- This section is for strings used in the second activity -->
    <string name="museum">Museum</string>
    <string name="click">Please click on the image below to be taken to its website!</string>
    <string name="ticketNumber">Number of Tickets:</string>
    <string name="museumImage">Museum Image</string>
    <string name="tickets">Tickets</string>
    <string name="priceLabel">Ticket Price: \t</string>
    <string name="taxLabel">Sales Tax: \t</string>
    <string name="totalLabel">Total Price: \t</string>
    <string name="initialValue">$0.00</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>