<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity2">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </com.google.android.material.appbar.AppBarLayout>

    <include
        android:id="@+id/include"
        layout="@layout/content_main" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/activityTwoText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginBottom="-15dp"
            android:focusable="false"
            android:gravity="center"
            android:text="@string/museum"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="40sp"
            android:textStyle="bold|italic" />

        <TextView
            android:id="@+id/navigatorText"
            android:layout_marginTop="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:inputType="none"
            android:text="@string/click"
            android:textSize="20sp" />

        <ImageButton
            android:id="@+id/activityButtonTwo"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:scaleType="centerCrop"
            android:contentDescription="@string/museumImage" />

        <TextView
            android:id="@+id/ticketsText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:ems="10"
            android:focusable="false"
            android:gravity="center"
            android:inputType="none"
            android:text="@string/tickets"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="25sp"
            android:textStyle="italic" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/adultText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/noOfTickets1"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="none"
                    android:text="@string/ticketNumber"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="16sp" />
                <!--
                <EditText
                    android:id="@+id/adultTicketInput"
                    android:layout_width="100dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="Enter 0-5"
                    android:inputType="number"
                    android:paddingLeft="10dp"
                    android:textSize="15dp" />
                    -->


                <Spinner
                    android:id="@+id/adultTicketInput"
                    android:layout_width="100dp"
                    android:layout_height="match_parent" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/seniorText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/noOfTickets2"
                    android:layout_width="166dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="none"
                    android:text="@string/ticketNumber"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/seniorTicketInput"
                    android:layout_width="100dp"
                    android:layout_height="match_parent" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/studentText"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:focusable="false"
                    android:text=""
                    android:textAlignment="center"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/noOfTickets3"
                    android:layout_width="166dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:ems="10"
                    android:focusable="false"
                    android:gravity="center"
                    android:inputType="none"
                    android:text="@string/ticketNumber"
                    android:textColor="@color/design_default_color_on_secondary"
                    android:textSize="16sp" />

                <Spinner
                    android:id="@+id/studentTicketInput"
                    android:layout_width="100dp"
                    android:layout_height="match_parent" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/ticketPriceLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:focusable="false"
                    android:text="@string/priceLabel"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/ticketPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="@string/initialValue"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/salesTaxLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:focusable="false"
                    android:text="@string/taxLabel"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/salesTax"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="@string/initialValue"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/totalLabel"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:focusable="false"
                    android:text="@string/totalLabel"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="25sp" />

                <TextView
                    android:id="@+id/totalPrice"
                    android:layout_width="wrap_content"
                    android:layout_height="35dp"
                    android:focusable="false"
                    android:inputType="none"
                    android:text="@string/initialValue"
                    android:textAlignment="center"
                    android:textColor="#000000"
                    android:textSize="20sp" />
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>